Change from fixed to minimum sized key columns
The consistency achieved with the fixed size key column hasn't been much of
benefit, and it wastes space for a tool that lives in a cramped environment.
Instead, add some more horizontal white-space between the columns but keep the
key column as narrow as possible, allowing it to change dimensions as you
navigate.

--- a/resources/public/dataspex/inspector.css
+++ b/resources/public/dataspex/inspector.css
@@ -615,7 +615,8 @@ a.clickable:hover,
 /* Dictionary tables */
 
 .dictionary:not(.table-auto):not(.keyless) th {
-  width: 15em;
+    width: 1em;
+    padding-right: 24px;
 }
 
 /* Source listings */
